pages/styles.module.scss
.container {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-gap: 20px;
  padding: 20px;
}

.title {
  grid-column: 1 / -1;
  text-align: center;
  margin-top: 100px;
  margin-bottom: 70px;
}

.carousel {
  grid-column: 1 / -1;
}

.logosGrid {
  grid-column: 1 / -1;
}

.iconTextContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  grid-column: 1 / -1;
}

.description {
  margin-bottom: 20px;
  text-align: center;
  font-size: 18px;
  grid-column: 1 / -1;
}

.iconText {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0 10px;
  font-size: 24px;
  position: relative;

}

.iconText::before {
  content: '';
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  clip-path: inset(0 0% 0 0);
  transition: clip-path 0.3s;
}

.iconText:hover::before {
  clip-path: inset(0 0 0 0);
}

.iconText p {
  margin-top: 5px;
  font-size: 14px;
}

@media (min-width: 768px) {
  .iconTextContainer {
    flex-direction: row;

  }
}


.iconText svg {
  font-size: 48px;
}

